--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Flask==1.1.2
-Flask-Cors==3.0.8
-Flask-RESTful==0.3.7
-gunicorn==20.0.4
-joblib==0.13.2
-jsonschema==2.6.0
-pandas==0.25.1
-pickleshare==0.7.5
-requests==2.23.0
-requests-file==1.4.3
-scikit-learn==0.24
-scipy==1.4.1
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==1.0.1
+Flask
+Flask-Cors
+Flask-RESTful
+gunicorn
+joblib
+jsonschema
+pandas
+pickleshare
+requests
+requests-file
+scikit-learn
+scipy
+wcwidth
+webencodings
+Werkzeug
